# simple_1d_shallow_water_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: conditions.yml  main.py
swe/: solver.py  utils.py
